--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "homepage": "https://github.com/Ahk294/CST3145-Individual-CW2#readme",
   "dependencies": {
-    "env": "^0.0.2"
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongodb": "^5.0.0"
   }
 }
